--- a/templates/main.html
+++ b/templates/main.html
@@ -5,19 +5,18 @@
   <title>Django</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!--Icons-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <link rel="stylesheet" href="static/css/main.css">
+  <!--CSS-->
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <!--Icons Image-->
+  <link rel="shortcut icon" href="static/images/favicon.ico">
+  <!--JavaScript-->
+  <script src="{% static 'js/main.js' %}"></script>
 
   <style>
-    @font-face {
-      font-family: myfirstfont;
-      src: url('https://fonts.googleapis.com/css2?family=Noto+Sans');
-    }
-
-    * {
-      font-family: myfirstfont;
-    }
 
   </style>
 </head>
