--- a/templates/index.html
+++ b/templates/index.html
@@ -42,16 +42,15 @@
 
 
   <!--Cards-->
-  <div class="container">
+  <div class="container" style="margin-left: 20px;">
   <div class="row">
   {% for product in products_category %}
-  <a href="{% url 'store:productList' product.id %}" style="text-decoration: none;">
+  <a href="{% url 'store:productList' product.id %}" style="text-decoration: none; margin-left: 20px;">
   <div class="card" style="width:300px; margin-top: 15px;">
     <img class="card-img-top" src="{{ product.image.url }}" style="width:100; height: 300;">
       <p class="card-title" style="text-align: center;">{{ product.category_name }}</p>
   </div>
   </a>
-  <hr>
   {% endfor %}
   </div>
   </div>
