--- a/templates/productList.html
+++ b/templates/productList.html
@@ -1,20 +1,29 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
-<h1>{{ products.category_name }}</h1>
-<div class="container">
+<p class="heading" style="text-align: center;">{{ products.category_name }}</p>
+<div class="container" style="margin-left: 20px;">
+  <div class="row">
     {% for product in products.product_set.all %}
-    <div class="card" style="width:300px; height: 400px;">
+    <div class="card" style="width:300px; margin-left: 20px; margin-top: 10px;">
         <img class="card-img-top" src="{{ product.product_image.url }}" alt="Card image" style="width:200px;">
         <div class="card-body">
-          <h4 class="card-title">{{ product.product_name }}</h4>
+          <h5 class="card-title text">{{ product.product_name }}</h5>
           <p class="card-text">{{ product.product_discription }}</p>
-          <p class="card-text a">Rs: {{ product.product_price }}</p>
-          <a href="#" class="btn btn-secondary">Buy Now</a>
+          <p class="card-text"> ₹ {{ product.product_price }}</p>
+
+          {% if user.is_authenticated %}
+          <a href="{% url 'store:addressForm' %}" class="btn btn-secondary">Buy Now</a>
           <button class="btn btn-secondary" style="margin-left: 20px;" onclick="addingCart()">Add to Cart</a>
+          {% else %}
+          <a href="{% url 'accounts:login' %}" class="btn btn-secondary">Buy Now</a>
+          <a href="{% url 'accounts:login' %}" class="btn btn-secondary" style="margin-left: 20px;">Add to Cart</a>
+          {% endif %}
+
         </div>
       </div>
     {% endfor %}
+  </div>
     <br>
   </div>
 {% endblock content %}
