Text decoration is none and register our models also

--- a/templates/complete.html
+++ b/templates/complete.html
@@ -19,7 +19,7 @@
 <body>
     <p class="heading" style="margin-top: 100px;">Thank You</p>
     <p>Your Account created Successfuly</p>
-    <p><a href="{% url 'accounts:login' %}">Now Sign-in</a></p>
+    <p><a href="{% url 'accounts:login' %}" style="text-decoration: none;">Now Sign-in</a></p>
 
 </body>
 </html>
