--- a/templates/register.html
+++ b/templates/register.html
@@ -41,7 +41,7 @@
                 </form>
             </div>
             <div class="card-footer">
-                <p style="text-align: center">Already Customer? <a href="{% url 'accounts:login' %}">Sign-in</a></p>
+                <p style="text-align: center">Already Customer? <a href="{% url 'accounts:login' %}" style="text-decoration: none;">Sign-in</a></p>
             </div>
         </div>
     </div>
