--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                     <div class="form-group">
                         <input type="text" name="username" class="form-control input-alig" placeholder="Enter Mobile Number">
                     </div>
-                    <div class="form-group"><a href="{% url 'accounts:forgotPassword' %}" style="margin-left: 210px;">Forgot Password</a>
+                    <div class="form-group"><a href="{% url 'accounts:forgotPassword' %}" style="margin-left: 210px; text-decoration: none;">Forgot Password</a>
                         <input type="password" name="password" class="form-control input-alig" placeholder="Enter Password">
                     </div>
 
@@ -36,7 +36,7 @@
                 </form>
             </div>
             <div class="card-footer">
-                <p style="text-align: center">New Customer? <a href="{% url 'accounts:register' %}">Create Your Account</a></p>
+                <p style="text-align: center">New Customer? <a href="{% url 'accounts:register' %}" style="text-decoration: none;">Create Your Account</a></p>
             </div>
         </div>
     </div>
