update item in cart this functionality add

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,13 +12,10 @@
   <!--CSS-->
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
   <!--Icons Image-->
-  <link rel="shortcut icon" href="static/images/favicon.ico">
-  <!--JavaScript-->
-  <script src="{% static 'js/main.js' %}"></script>
-
-  <style>
-
-  </style>
+  <!-- <link rel="shortcut icon" href="static/images/favicon.ico"> -->
+  <script>
+    let user = '{{ request.user }}';
+  </script>
 </head>
 <body>
 
@@ -67,7 +64,7 @@
           <img id="cart-icon" src="{% static 'images/cart1.png' %}">
         </a>
       </li>
-      <p id="cart-total">10</p>
+      <p id="cart-total">{{ cartItems }}</p>
       
     </ul>
   </div>  
@@ -80,5 +77,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!--JavaScript-->
+<script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
